[gd_scene load_steps=4 format=2]

[ext_resource path="res://hud/outfit_select.gd" type="Script" id=1]
[ext_resource path="res://characters/Character_ik.tscn" type="PackedScene" id=2]
[ext_resource path="res://better_env.tres" type="Environment" id=3]

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 98.0
margin_bottom = 14.0
text = "OUTFIT SELECT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 50.0
margin_right = 119.0
margin_bottom = 94.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxUniform" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 131.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxUniform"]
margin_top = 3.0
margin_right = 52.0
margin_bottom = 17.0
text = "Uniform"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButtonU" type="OptionButton" parent="VBoxContainer/HBoxUniform"]
margin_left = 56.0
margin_right = 131.0
margin_bottom = 20.0
text = "Default"
items = [ "Default", null, false, 0, null, "Camo", null, false, 1, null ]
selected = 0

[node name="HBoxRifle" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 131.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxRifle"]
margin_top = 3.0
margin_right = 28.0
margin_bottom = 17.0
text = "Rifle"

[node name="OptionButtonR" type="OptionButton" parent="VBoxContainer/HBoxRifle"]
margin_left = 32.0
margin_right = 89.0
margin_bottom = 20.0
text = "Rifle"
items = [ "Rifle", null, false, 0, null, "Sniper rifle", null, true, 1, null ]
selected = 0

[node name="HBoxSidearm" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 131.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxSidearm"]
margin_top = 3.0
margin_right = 52.0
margin_bottom = 17.0
text = "Sidearm"

[node name="OptionButtonS" type="OptionButton" parent="VBoxContainer/HBoxSidearm"]
margin_left = 56.0
margin_right = 121.0
margin_bottom = 20.0
text = "Pistol"
items = [ "Pistol", null, false, 0, null, "Crossbow", null, true, 1, null ]
selected = 0

[node name="HBoxBelt1" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 131.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxBelt1"]
margin_top = 3.0
margin_right = 38.0
margin_bottom = 17.0
text = "Belt 1"

[node name="OptionButtonS" type="OptionButton" parent="VBoxContainer/HBoxBelt1"]
margin_left = 42.0
margin_right = 103.0
margin_bottom = 20.0
text = "Knife"
items = [ "Knife", null, false, 0, null, "Baton", null, false, 1, null ]
selected = 0

[node name="HBoxGrenade1" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 96.0
margin_right = 131.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxGrenade1"]
margin_top = 3.0
margin_right = 66.0
margin_bottom = 17.0
text = "Grenade 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxGrenade1"]
margin_left = 70.0
margin_right = 99.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="VBoxContainer/HBoxGrenade1"]
visible = false
margin_left = 103.0
margin_right = 146.0
margin_bottom = 20.0
disabled = true
text = "Drop"

[node name="HBoxGrenade2" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 96.0
margin_right = 131.0
margin_bottom = 116.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxGrenade2"]
margin_top = 3.0
margin_right = 66.0
margin_bottom = 17.0
text = "Grenade 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton2" type="OptionButton" parent="VBoxContainer/HBoxGrenade2"]
margin_left = 70.0
margin_right = 99.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="VBoxContainer/HBoxGrenade2"]
visible = false
margin_left = 103.0
margin_right = 146.0
margin_bottom = 20.0
disabled = true
text = "Drop"

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -500.0
margin_top = 50.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 400 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 500, 400 )
own_world = true
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2 )
environment = ExtResource( 3 )
current = true

[node name="Character" parent="ViewportContainer/Viewport" instance=ExtResource( 2 )]

[node name="Button" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -10.0
margin_right = 93.0
margin_bottom = 10.0
text = "CONFIRM"

[connection signal="gui_input" from="." to="." method="_on_Control_gui_input"]
[connection signal="item_selected" from="VBoxContainer/HBoxUniform/OptionButtonU" to="." method="_on_OptionButtonU_item_selected"]
[connection signal="item_selected" from="VBoxContainer/HBoxBelt1/OptionButtonS" to="." method="_on_OptionButtonS_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
